# hipster-hits

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  generate-docker.bat  generate.bat  install-docker.bat  install.bat  main.py  pyproject.toml  requirements.txt
